manifests/media-tools/calibre/deploy-calibre.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre
  namespace: media-tools
spec:
  serviceName: calibre
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
        name: calibre
        appGroup: media-arr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: medium-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: calibre
        image: docker.io/crocodilestick/calibre-web-automated:V3.0.4
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          # capabilities:
          #   drop: ["ALL"]
          #   add:
          #   - "CHOWN"
          #   - "SETGID"
          #   - "SETUID"
          #   - "DAC_OVERRIDE"
          #   - "DAC_READ_SEARCH"
        resources:
          requests:
            cpu: 1m
            memory: 320Mi
          limits:
            # cpu: 1000m
            memory: 600Mi
        ports:
        - containerPort: 8083
          name: http-calibre
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http-calibre
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: calibre-config
          mountPath: /config
        - name: books
          mountPath: /calibre-library
        - name: books-to-import
          mountPath: /cwa-book-ingest
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: longhorn-calibre-config-pvc
        - name: books
          persistentVolumeClaim:
            claimName: nfs-books
        - name: books-to-import
          persistentVolumeClaim:
            claimName: nfs-books-to-import
