manifests/media-tools/calibre/deploy-cloudflare-bypass.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudflare-bypass
spec:
  serviceName: cloudflare-bypass
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: cloudflare-bypass
  template:
    metadata:
      labels:
        app: cloudflare-bypass
        name: cloudflare-bypass
        appGroup: media-arr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: medium-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: cloudflare-bypass
        image: ghcr.io/sarperavci/cloudflarebypassforscraping:sha256:52d0b3e7f41da512ff656c588761c957f498fb4a5ef1b1d57e0c6e85c63436f3
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: true
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          # capabilities:
          #   drop: ["ALL"]
          #   add:
          #   - "CHOWN"
          #   - "SETGID"
          #   - "SETUID"
          #   - "DAC_OVERRIDE"
          #   - "DAC_READ_SEARCH"
        resources:
          requests:
            cpu: 1m
            memory: 320Mi
          limits:
            # cpu: 1000m
            memory: 600Mi
        ports:
        - containerPort: 8000
          name: http-cloudflare
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http-cloudflare
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
      dnsConfig:
        options:
          - name: ndots
            value: "1"
