manifests/media-tools/calibre/service.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: calibre-service
#   name: calibre-service
#   namespace: media-tools
# spec:
#   type: ClusterIP
#   ports:
#   - port: 8083
#     protocol: TCP
#     targetPort: http-calibre
#     name: web
#   selector:
#     app: calibre


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre-downloader-aa-service
  name: calibre-downloader-aa-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8084
    protocol: TCP
    targetPort: http-dl-aa
    name: web-downloader-aa
  selector:
    app: calibre-downloader-aa


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudflare-bypass-service
  name: cloudflare-bypass-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: http-cloudflare
    name: web-cloudflare-bypass
  selector:
    app: cloudflare-bypass
