manifests/media-tools/calibre/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "books.ucdialplans.com"
  rules:
  - backendRefs:
    - name: calibre-service
      namespace: media-tools
      kind: Service
      port: 8083
    # Required for Calibre to properly format the request header to use HTTPS.
    # Otherwise, it will tell Kobo to reach out via HTTP
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: "X-SCHEME"
          value: "https"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-downloader-aa
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "book-dl.ucdialplans.com"
  rules:
  - backendRefs:
    - name: calibre-downloader-aa-service
      namespace: media-tools
      kind: Service
      port: 8084
