manifests/media-tools/calibre/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: calibre
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: calibre
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8083"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8083"
    - fromEndpoints:
        - matchLabels:
            app: overseerr
      toPorts:
        - ports:
            - port: "8083"
    - fromEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "8083"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
